⬆️ Bump Next.js to v16

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "plugins": [
       {
         "name": "next"
@@ -30,7 +30,8 @@
     "src/**/*.ts",
     "src/**/*.tsx",
     ".next/types/**/*.ts",
-    "./jest.setup.ts"
+    "./jest.setup.ts",
+    ".next/dev/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
