--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@headlessui/react": "2.2.9",
     "@mdx-js/loader": "3.1.1",
     "@mdx-js/react": "3.1.1",
-    "@next/mdx": "15.5.4",
+    "@next/mdx": "16.0.0",
     "@plaiceholder/next": "2.5.0",
     "@types/lodash.truncate": "4.4.9",
     "@types/mdx": "2.0.13",
@@ -44,13 +44,13 @@
     "feed": "5.1.0",
     "lodash.groupby": "^4.6.0",
     "lodash.truncate": "4.4.2",
-    "next": "15.5.4",
+    "next": "16.0.0",
     "next-pwa": "^5.6.0",
     "next-seo": "^6.8.0",
     "next-themes": "0.4.6",
     "plaiceholder": "2.5.0",
-    "react": "19.1.1",
-    "react-dom": "19.1.1",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-remove-scroll": "2.7.1",
     "rehype-autolink-headings": "7.1.0",
     "rehype-external-links": "^3.0.0",
@@ -79,14 +79,14 @@
     "@testing-library/react": "16.3.0",
     "@types/jest": "30.0.0",
     "@types/lodash.groupby": "4.6.9",
-    "@types/react": "19.1.12",
+    "@types/react": "19.2.2",
     "@types/ungap__structured-clone": "1.2.0",
     "@typescript-eslint/eslint-plugin": "8.46.0",
     "@typescript-eslint/parser": "8.46.0",
     "@ungap/structured-clone": "1.3.0",
     "classix": "2.2.4",
     "eslint": "^8.57.0",
-    "eslint-config-next": "15.5.4",
+    "eslint-config-next": "16.0.0",
     "eslint-config-prettier": "10.1.8",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-typescript": "4.4.4",
@@ -229,5 +229,10 @@
     "semi": false,
     "singleQuote": true
   },
-  "packageManager": "pnpm@10.13.1"
+  "packageManager": "pnpm@10.13.1",
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.2.2"
+    }
+  }
 }
