--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@headlessui/react": "2.2.9",
     "@mdx-js/loader": "3.1.1",
     "@mdx-js/react": "3.1.1",
-    "@next/mdx": "15.5.4",
+    "@next/mdx": "16.0.0",
     "@plaiceholder/next": "2.5.0",
     "@types/lodash.truncate": "4.4.9",
     "@types/mdx": "2.0.13",
@@ -44,13 +44,13 @@
     "feed": "5.1.0",
     "lodash.groupby": "^4.6.0",
     "lodash.truncate": "4.4.2",
-    "next": "15.5.4",
+    "next": "16.0.0",
     "next-pwa": "^5.6.0",
     "next-seo": "^6.8.0",
     "next-themes": "0.4.6",
     "plaiceholder": "2.5.0",
-    "react": "19.1.1",
-    "react-dom": "19.1.1",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-remove-scroll": "2.7.1",
     "rehype-autolink-headings": "7.1.0",
     "rehype-external-links": "^3.0.0",
@@ -71,7 +71,10 @@
     "swr": "2.3.6"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "3.3.1",
+    "@eslint/js": "9.38.0",
     "@lhci/cli": "^0.15.1",
+    "@next/eslint-plugin-next": "16.0.0",
     "@tailwindcss/postcss": "4.1.14",
     "@tailwindcss/typography": "0.5.19",
     "@testing-library/dom": "10.4.1",
@@ -79,20 +82,20 @@
     "@testing-library/react": "16.3.0",
     "@types/jest": "30.0.0",
     "@types/lodash.groupby": "4.6.9",
-    "@types/react": "19.1.12",
+    "@types/react": "19.2.2",
     "@types/ungap__structured-clone": "1.2.0",
-    "@typescript-eslint/eslint-plugin": "8.46.0",
-    "@typescript-eslint/parser": "8.46.0",
+    "@typescript-eslint/eslint-plugin": "8.46.2",
+    "@typescript-eslint/parser": "8.46.2",
     "@ungap/structured-clone": "1.3.0",
     "classix": "2.2.4",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "15.5.4",
+    "eslint": "^9.38.0",
+    "eslint-config-next": "16.0.0",
     "eslint-config-prettier": "10.1.8",
-    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-typescript": "4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-react": "^7.37.5",
+    "globals": "16.4.0",
     "husky": "^9.1.7",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
@@ -107,111 +110,6 @@
     "tailwindcss": "4.1.14",
     "typescript": "5.9.3",
     "uglify-js": "3.19.3"
-  },
-  "eslintConfig": {
-    "parser": "@typescript-eslint/parser",
-    "env": {
-      "jest": true,
-      "browser": true,
-      "es2021": true,
-      "node": true
-    },
-    "extends": [
-      "eslint:recommended",
-      "plugin:@typescript-eslint/recommended",
-      "plugin:react/recommended",
-      "plugin:import/typescript",
-      "plugin:@next/next/recommended",
-      "prettier"
-    ],
-    "parserOptions": {
-      "ecmaFeatures": {
-        "jsx": true
-      },
-      "ecmaVersion": 12,
-      "sourceType": "module",
-      "requireConfigFile": false,
-      "babelOptions": {
-        "presets": [
-          "next/babel"
-        ]
-      }
-    },
-    "plugins": [
-      "react",
-      "@typescript-eslint",
-      "import"
-    ],
-    "rules": {
-      "react/jsx-uses-react": "off",
-      "react/react-in-jsx-scope": "off",
-      "@next/next/no-img-element": "off",
-      "@typescript-eslint/no-var-requires": "off",
-      "react/no-unescaped-entities": "off",
-      "@typescript-eslint/no-require-imports": "off"
-    },
-    "overrides": [
-      {
-        "files": [
-          "*.spec.tsx",
-          "stubs.ts",
-          "**/__mocks__/*.ts"
-        ],
-        "rules": {
-          "react/display-name": 0,
-          "react/prop-types": 0,
-          "@next/next/no-css-tags": 0
-        }
-      },
-      {
-        "files": [
-          "*.tsx"
-        ],
-        "rules": {
-          "react/no-unknown-property": [
-            2,
-            {
-              "ignore": [
-                "jsx",
-                "global"
-              ]
-            }
-          ]
-        }
-      },
-      {
-        "files": [
-          "opengraph-image.tsx"
-        ],
-        "rules": {
-          "react/no-unknown-property": [
-            2,
-            {
-              "ignore": [
-                "tw"
-              ]
-            }
-          ]
-        }
-      }
-    ],
-    "settings": {
-      "react": {
-        "version": "detect"
-      },
-      "import/resolver": {
-        "alias": {
-          "map": [
-            [
-              "src",
-              "./src"
-            ]
-          ]
-        }
-      },
-      "typescript": true,
-      "node": true
-    }
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
@@ -229,5 +127,10 @@
     "semi": false,
     "singleQuote": true
   },
-  "packageManager": "pnpm@10.13.1"
+  "packageManager": "pnpm@10.13.1",
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.2.2"
+    }
+  }
 }
