⬆️ Bump `node` version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,30 +1,30 @@
 name: CI
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 jobs:
   ci:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v6
-      with:
-        ref: ${{ github.event.pull_request.head.sha }}
-    - uses: pnpm/action-setup@v4
-    - uses: actions/setup-node@v6
-      with:
-        cache: "pnpm"
-        node-version-file: '.node-version'
-    - name: Install dependencies 📦
-      run: pnpm install
-    - name: Lint 🎨
-      run: pnpm run test:lint
-    - name: TypeScript check 🏷
-      run: pnpm run tscheck
-    - name: Tests ✅
-      run: pnpm run test:unit
-    - name: Upload Coverage 📈
-      uses: codecov/codecov-action@v5
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
+      - uses: actions/checkout@v6
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+      - uses: pnpm/action-setup@v4
+      - uses: actions/setup-node@v6
+        with:
+          cache: 'pnpm'
+          node-version-file: '.node-version'
+      - name: Install dependencies 📦
+        run: pnpm install
+      - name: Lint 🎨
+        run: pnpm run test:lint
+      - name: TypeScript check 🏷
+        run: pnpm run tscheck
+      - name: Tests ✅
+        run: pnpm run test:unit
+      - name: Upload Coverage 📈
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
